Configurações iniciais do projeto

--- a/src/app/core/components/gun/gun.component.html
+++ b/src/app/core/components/gun/gun.component.html
@@ -1,1 +1,4 @@
-<p>gun works!</p>
+<div class='gun' id={player.id}  style="left: 14px;">
+    <div class='gun-cap'></div>
+    <app-projectile *ngIf="shooting"></app-projectile>
+</div>
