--- a/src/styles.scss
+++ b/src/styles.scss
@@ -217,3 +217,12 @@ p {
   top: 0;
   left: 0;
 }
+
+.power-bar-lats-shoot {
+  background: #11a035;
+  height: 100%;
+  width: 1%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
