add alteração de angulo da arma

--- a/src/app/core/components/gun/gun.component.html
+++ b/src/app/core/components/gun/gun.component.html
@@ -1,4 +1,4 @@
-<div class='gun' id={player.id}  style="left: 14px;">
+<div class='gun' id={player.id}  [style]="{ left: '14px', transform: 'rotate(' + angle + 'deg)' }">
     <div class='gun-cap'></div>
     <app-projectile *ngIf="shooting"></app-projectile>
 </div>
