--- a/src/app/core/components/tank/tank.component.html
+++ b/src/app/core/components/tank/tank.component.html
@@ -10,7 +10,7 @@
   <div class="tank-body"></div>
   <div class="tank-turret"></div>
   <div class="tank-gun">
-    <app-gun></app-gun>
+    <app-gun [angle]="gunAngle"></app-gun>
   </div>
   <div class="cover">
     <div class="wheel-1">
