--- a/src/app/features/pages/game/game.component.html
+++ b/src/app/features/pages/game/game.component.html
@@ -47,6 +47,7 @@
         *ngFor="let player of players"
         [enemy]="enemy"
         [player]="player"
+        [game]="gameData"
     ></app-tank>
   </div>
   <div class="power-bar-container">
