fix tiro e efeito do vento

--- a/src/app/core/components/gun/gun.component.html
+++ b/src/app/core/components/gun/gun.component.html
@@ -7,7 +7,7 @@
   <app-projectile
   *ngIf="game"
     [position]="position"
-    [angle]="angle"
+    [gunAngle]="angle"
     [power]="power"
     [game]="game"
   ></app-projectile>
