--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -12,6 +12,10 @@
         border: 1px solid #ccc;
         padding: 40px;
 
+        h2 {
+            text-align: center;
+        }
+
         button {
             width: 100%;
             height: 40px;
