--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    color: #cecece;
     
     form {
         width: 400px;
@@ -11,21 +12,11 @@
         border-radius: 10px;
         border: 1px solid #ccc;
         padding: 40px;
+        display: flex;
+        flex-direction: column;
 
         h2 {
             text-align: center;
-        }
-
-        button {
-            width: 100%;
-            height: 40px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            background-color: #184aee;
-            color: #ffffff;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
         }
     }
 }
