--- a/src/app/features/pages/game/game.component.html
+++ b/src/app/features/pages/game/game.component.html
@@ -1,7 +1,7 @@
 <div
-  class="row"
+  class="game"
   tabindex="0"
-  *ngIf="players.length > 1"
+  *ngIf="player"
 >
   <div id="game">
     <div id="timer">
@@ -29,11 +29,11 @@
       <p class="player"></p>
     </div>
     <div id="player-1-status">
-      <p class="name">{{ players[0].name }}</p>
+      <p class="name">{{ player?.name }}</p>
       <p id="tank-1-health"></p>
     </div>
     <div id="player-2-status">
-      <p class="name">{{ players[1].name }}</p>
+      <p class="name">{{ enemy?.name }}</p>
       <p id="tank-2-health"></p>
     </div>
     <div id="result">
@@ -45,8 +45,15 @@
       <p class="angle">{{ gunAngle }}</p>
     </div>
     <app-tank
-        *ngFor="let player of players"
+        *ngIf="player"
         [player]="player"
+        [game]="gameData"
+        (angle)="gunAngle = $event"
+        #myTank
+    ></app-tank>
+    <app-tank
+        *ngIf="enemy"
+        [player]="enemy"
         [game]="gameData"
         (angle)="gunAngle = $event"
     ></app-tank>
@@ -59,8 +66,9 @@
     </div>
   </div>
 </div>
-<div class="row center-align">
-  <div id="instructions">
+<div class="align-center">
+  <button class="btn btn-danger" (click)="exit()">Desistir</button>
+  <div class="instructions">
     <p>Left and Right Arrow Keys: Move your tank left and right</p>
     <p>Up and Down Arrow Keys: Move your tank&apos;s gun angle</p>
     <p>Space Bar: Shoot your gun</p>
