--- a/src/app/features/pages/game/game.component.html
+++ b/src/app/features/pages/game/game.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
   class="game"
   tabindex="0"
   *ngIf="player"
@@ -77,4 +77,39 @@
       opponent does it first!
     </p>
   </div>
+</div> -->
+<div class="game">
+  <div class="d-flex">
+    <p class="timer">
+      Timer {{ counter }}
+    </p>
+    <div id="angle">
+      <p class="angle">Angulo: {{ player?.angle }}</p>
+    </div>
+    <p class="result">
+      {{ myTurn ? 'Sua vez' : 'Vez do adversário' }}
+    </p>
+    <div id="wind-pic">
+      <div id="wind-arrow">
+        <img
+          src="/assets/seta-vento.png"
+          alt="vento"
+          width="25px"
+          height="50px"
+          [style]="{ transform: 'rotate(' + (windAngle > 180 ? 270 : 90) + 'deg)' }"
+        />
+        <div id="wind-arrow-tip"></div>
+      </div>
+    </div>
+    <p class="timer">Velocidade do vento: {{ windSpeed }}</p>
+  </div>
+  <canvas #canva width="800" height="600" id="myCanvas" style="border: 2px solid #cecece; border-radius: 8px;"></canvas>
+  <div class="power-bar-container">
+    <div class="power-bar">
+      <h5>Press Spacebar to increment power</h5>
+      <div class="power-bar-fill" [style]="{ width: (this.power*100)/this.maxPower + '%' }"></div>
+      <div class="power-bar-lats-shoot" [style]="{ left: (this.lastShot*100)/this.maxPower + '%' }"></div>
+    </div>
+  </div>
+  <button class="btn btn-danger" (click)="exit()">Desistir</button>
 </div>
