adicionado tela de cadastro

--- a/src/app/features/pages/home/home.component.html
+++ b/src/app/features/pages/home/home.component.html
@@ -12,7 +12,7 @@
                 <input class="form-control" type="password" placeholder="senha" name="password" id="password" formControlName="password" />
             </div>
             <button class="btn btn-primary mb-3" type="submit">Entrar</button>
-            <span>Não tem conta? <a href="#">Cadastre-se aqui</a></span>
+            <span>Não tem conta? <a routerLink="/cadastrar">Cadastre-se aqui</a></span>
         </form>
     </div>
 </div>
